--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-dist
+*.js
+!jest.config.js
+*.d.ts
 node_modules
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
+
+# Parcel build directories
+.cache
+.build
