--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
-  "name": "muckcdk",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "muck_cdk",
+  "version": "0.1.0",
+  "bin": {
+    "muck_cdk": "bin/muck_cdk.js"
+  },
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "tsc -w",
+    "test": "jest",
+    "cdk": "cdk"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "aws-cdk": "^1.31.0",
-    "typescript": "^3.8.3"
+    "@aws-cdk/assert": "1.31.0",
+    "@types/jest": "^24.0.22",
+    "@types/node": "10.17.5",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.1.0",
+    "aws-cdk": "1.31.0",
+    "ts-node": "^8.1.0",
+    "typescript": "~3.7.2"
+  },
+  "dependencies": {
+    "@aws-cdk/aws-dynamodb": "^1.31.0",
+    "@aws-cdk/core": "1.31.0",
+    "source-map-support": "^0.5.16"
   }
 }
